<?xml version="1.0"?>
<package format="3">
  <name>px4_msgs_bridge</name>
  <version>1.0.0</version>
  <description>Adapter to convert PX4 uORB messages to standard ROS 2 messages</description>
  <maintainer email="atarbabgei@gmail.com">afb23</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
